# quokka

./: Cargo.toml  LICENCE  README.md  about.hbs  about.toml  build_wasm.sh  colormaps.py  mkdocs.yml  present.json  pyproject.toml  test_builds.sh
.github/workflows/: viewer.yml
docs/: index.md
docs/api/: render.md  utils.md  viewer.md
docs/examples/: video.ipynb  viewer.ipynb
presets/: default.json  dvr.json  iso_colormap.json  ssao.json
public/: index.html
quokka/: __init__.py  render.py  viewer.py
src/: camera.rs  cmap.rs  controller.rs  image.rs  lib.rs  offline.rs  presets.rs  py.rs  renderer.rs  ssao.rs  ui.rs  viewer.rs  volume.rs  web.rs
src/shaders/: display.wgsl  raymarch.wgsl  ssao.wgsl
