[project]
name = "quokka"
version = "0.2.4"
description = "Volume Visualization"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["4D", "volume", "visualization", "quokka"]
authors = [{ name = "Simon Niedermayr" }]

dependencies = ["numpy", "matplotlib", "seaborn", "cmasher", "cffi"]

[project.optional-dependencies]
ipython = ["ipython"]

[project.urls]
homepage = "https://keksboter.github.io/quokka"
repository = "https://github.com/KeKsBoTer/quokka"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module", "python"]

[project.gui-scripts]
quokka = "quokka.quokka:standalone"
